welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: illegal start of statement
		{else}
                 ^